# quillstrap

./: .gitignore  Cargo.toml  run.sh
.devcontainer/: devcontainer.json
other/path/: rq
other/setup/: Dockerfile  first_setup.sh  welcome_back.sh
quillstrap/: Cargo.toml
quillstrap/old_src/: common.rs
quillstrap/src/: args.rs  config.rs  main.rs  prelude.rs  thetrait.rs
quillstrap/src/common/: cli.rs  commands.rs  deploy.rs  git.rs  io.rs  mod.rs  mounts.rs  network.rs  partitions.rs  serial.rs  signing.rs
quillstrap/src/logic/: auto_mode.rs  manual_mode.rs  mod.rs
quillstrap/src/things/: mod.rs
quillstrap/src/things/init/: alpine_chroot_install.rs  boot_partition.rs  branding.rs  eink_kernel_magic.rs  firmware.rs  initrd.rs  kernel.rs  mod.rs  partition_setup.rs  quill_init.rs  sysroot.rs  toolchain.rs
quillstrap/src/things/low/: backup.rs  backup_mmc.rs  expose_mmc.rs  kernel.rs  mod.rs  rkbin.rs  serial_launch.rs  uboot.rs
quillstrap/src/things/os/: mod.rs
quillstrap/src/things/os/gui/: mod.rs  slint_gallery.rs
quillstrap/src/things/os/low/: mod.rs  qoms.rs  rootfs.rs  rootfs_configs.rs  rootfs_sysroot.rs
src/: build_tasks.rs  common.rs  main.rs  signing.rs
